// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Change Roles Renders the modal and submit form 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="swal2-shown swal2-height-auto"
  >
    <div
      class="swal2-container swal2-center swal2-backdrop-show"
      style="overflow-y: auto;"
    >
      <div
        aria-describedby="swal2-html-container"
        aria-labelledby="swal2-title"
        aria-live="assertive"
        aria-modal="true"
        class="swal2-popup swal2-modal swal2-icon-warning swal2-show"
        role="dialog"
        style="display: grid;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="swal2-close"
          style="display: none;"
          type="button"
        >
          ×
        </button>
        <ul
          class="swal2-progress-steps"
          style="display: none;"
        />
        <div
          class="swal2-icon swal2-warning swal2-icon-show"
          style="display: flex;"
        >
          <div
            class="swal2-icon-content"
          >
            !
          </div>
        </div>
        <img
          class="swal2-image"
          style="display: none;"
        />
        <h2
          class="swal2-title"
          id="swal2-title"
          style="display: block;"
        >
          Are you sure?
        </h2>
        <div
          class="swal2-html-container"
          id="swal2-html-container"
          style="display: block;"
        >
          This bus already have a driver!
        </div>
        <input
          class="swal2-input"
          style="display: none;"
        />
        <input
          class="swal2-file"
          style="display: none;"
          type="file"
        />
        <div
          class="swal2-range"
          style="display: none;"
        >
          <input
            type="range"
          />
          <output />
        </div>
        <select
          class="swal2-select"
          style="display: none;"
        />
        <div
          class="swal2-radio"
          style="display: none;"
        />
        <label
          class="swal2-checkbox"
          for="swal2-checkbox"
          style="display: none;"
        >
          <input
            type="checkbox"
          />
          <span
            class="swal2-label"
          />
        </label>
        <textarea
          class="swal2-textarea"
          style="display: none;"
        />
        <div
          class="swal2-validation-message"
          id="swal2-validation-message"
          style="display: none;"
        />
        <div
          class="swal2-actions"
          style="display: flex;"
        >
          <div
            class="swal2-loader"
          />
          <button
            aria-label=""
            class="swal2-confirm swal2-styled swal2-default-outline"
            style="display: inline-block; background-color: rgb(48, 133, 214);"
            type="button"
          >
            Yes, change!
          </button>
          <button
            aria-label=""
            class="swal2-deny swal2-styled"
            style="display: none;"
            type="button"
          >
            No
          </button>
          <button
            aria-label=""
            class="swal2-cancel swal2-styled swal2-default-outline"
            style="display: inline-block; background-color: rgb(221, 51, 51);"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          class="swal2-footer"
          style="display: none;"
        />
        <div
          class="swal2-timer-progress-bar-container"
        >
          <div
            class="swal2-timer-progress-bar"
            style="display: none;"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="font-raleway py-2 px-4"
      >
        <h1
          class="font-bold font-raleway text-center text-2xl mb-2"
        >
          Change user's role
        </h1>
        <hr />
        <div
          class="mt-2"
        >
          <ul>
            <li>
              <b>
                Name
              </b>
              : 
              Fabrice
            </li>
            <li>
              <b>
                Email
              </b>
              : 
              emanuel@me.com
            </li>
            <li>
              <b>
                Role
              </b>
              : 
              Driver
            </li>
            <li />
          </ul>
        </div>
        <form
          action="#none"
          class="block"
          id="role-form"
        >
          <label
            class="required block my-3"
            for="permissions"
          >
            Change role:
          </label>
          <select
            aria-required="true"
            class="bg-gray-300 block my-2 border px-2 py-1 rounded-sm placeholder:font-raleway uppercase"
            id="permissions"
            name="permission"
            required=""
          >
            <option
              hidden=""
              value=""
            >
              Choose new role
            </option>
            <option
              value="1"
            >
              Admin
            </option>
            <option
              value="2"
            >
              Operator
            </option>
            <option
              value="3"
            >
              Driver
            </option>
          </select>
          <button
            class="bg-primary rounded-md text-white font-bold font-raleway py-2 px-3 hover:bg-hover transition-all block hover:transition-all"
            type="submit"
          >
            Continue
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="font-raleway py-2 px-4"
    >
      <h1
        class="font-bold font-raleway text-center text-2xl mb-2"
      >
        Change user's role
      </h1>
      <hr />
      <div
        class="mt-2"
      >
        <ul>
          <li>
            <b>
              Name
            </b>
            : 
            Fabrice
          </li>
          <li>
            <b>
              Email
            </b>
            : 
            emanuel@me.com
          </li>
          <li>
            <b>
              Role
            </b>
            : 
            Driver
          </li>
          <li />
        </ul>
      </div>
      <form
        action="#none"
        class="block"
        id="role-form"
      >
        <label
          class="required block my-3"
          for="permissions"
        >
          Change role:
        </label>
        <select
          aria-required="true"
          class="bg-gray-300 block my-2 border px-2 py-1 rounded-sm placeholder:font-raleway uppercase"
          id="permissions"
          name="permission"
          required=""
        >
          <option
            hidden=""
            value=""
          >
            Choose new role
          </option>
          <option
            value="1"
          >
            Admin
          </option>
          <option
            value="2"
          >
            Operator
          </option>
          <option
            value="3"
          >
            Driver
          </option>
        </select>
        <button
          class="bg-primary rounded-md text-white font-bold font-raleway py-2 px-3 hover:bg-hover transition-all block hover:transition-all"
          type="submit"
        >
          Continue
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Modal tests Should render the assign modal 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="swal2-shown swal2-height-auto"
  >
    <div
      aria-hidden="true"
    >
      <div
        class="font-raleway w-fit px-8 py-2"
      >
        <h1
          class="font-bold"
        >
          Driver Info
        </h1>
        <hr />
        <ul>
          <li>
            <span>
              Name: 
            </span>
            <b>
              Fabrice
            </b>
          </li>
          <li>
            <span>
              Email: 
            </span>
            <b>
              emanuel@me.com
            </b>
          </li>
          <li>
            <span>
              License: 
            </span>
            <b>
              199787200045637884773
            </b>
          </li>
          <li>
            <span>
              Assigned bus: 
            </span>
            <b>
              RAB1000
            </b>
          </li>
        </ul>
        <hr />
        <div>
          <form
            action="#23"
            class="py-2"
            id="assign-form"
          >
            <label
              class="block font-raleway"
              for="bus"
            >
              Bus plate number:
               
            </label>
            <input
              class="bg-gray-300 my-2 border px-2 py-1 rounded-sm placeholder:font-raleway uppercase"
              id="bus-plate"
              name="plate"
              placeholder="RAB1000"
              required=""
              type="text"
            />
            <button
              class="bg-primary rounded-md text-white font-bold font-raleway py-2 px-3 hover:bg-hover transition-all block hover:transition-all"
              type="submit"
            >
              Search
            </button>
            <div />
          </form>
        </div>
      </div>
    </div>
    <div
      class="swal2-container swal2-center swal2-backdrop-show"
      style="overflow-y: auto;"
    >
      <div
        aria-describedby="swal2-html-container"
        aria-labelledby="swal2-title"
        aria-live="assertive"
        aria-modal="true"
        class="swal2-popup swal2-modal swal2-icon-warning swal2-show"
        role="dialog"
        style="display: grid;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="swal2-close"
          style="display: none;"
          type="button"
        >
          ×
        </button>
        <ul
          class="swal2-progress-steps"
          style="display: none;"
        />
        <div
          class="swal2-icon swal2-warning swal2-icon-show"
          style="display: flex;"
        >
          <div
            class="swal2-icon-content"
          >
            !
          </div>
        </div>
        <img
          class="swal2-image"
          style="display: none;"
        />
        <h2
          class="swal2-title"
          id="swal2-title"
          style="display: block;"
        >
          Are you sure?
        </h2>
        <div
          class="swal2-html-container"
          id="swal2-html-container"
          style="display: block;"
        >
          This bus already have a driver!
        </div>
        <input
          class="swal2-input"
          style="display: none;"
        />
        <input
          class="swal2-file"
          style="display: none;"
          type="file"
        />
        <div
          class="swal2-range"
          style="display: none;"
        >
          <input
            type="range"
          />
          <output />
        </div>
        <select
          class="swal2-select"
          style="display: none;"
        />
        <div
          class="swal2-radio"
          style="display: none;"
        />
        <label
          class="swal2-checkbox"
          for="swal2-checkbox"
          style="display: none;"
        >
          <input
            type="checkbox"
          />
          <span
            class="swal2-label"
          />
        </label>
        <textarea
          class="swal2-textarea"
          style="display: none;"
        />
        <div
          class="swal2-validation-message"
          id="swal2-validation-message"
          style="display: none;"
        />
        <div
          class="swal2-actions"
          style="display: flex;"
        >
          <div
            class="swal2-loader"
          />
          <button
            aria-label=""
            class="swal2-confirm swal2-styled swal2-default-outline"
            style="display: inline-block; background-color: rgb(48, 133, 214);"
            type="button"
          >
            Yes, change!
          </button>
          <button
            aria-label=""
            class="swal2-deny swal2-styled"
            style="display: none;"
            type="button"
          >
            No
          </button>
          <button
            aria-label=""
            class="swal2-cancel swal2-styled swal2-default-outline"
            style="display: inline-block; background-color: rgb(221, 51, 51);"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          class="swal2-footer"
          style="display: none;"
        />
        <div
          class="swal2-timer-progress-bar-container"
        >
          <div
            class="swal2-timer-progress-bar"
            style="display: none;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <div
      class="font-raleway w-fit px-8 py-2"
    >
      <h1
        class="font-bold"
      >
        Driver Info
      </h1>
      <hr />
      <ul>
        <li>
          <span>
            Name: 
          </span>
          <b>
            Fabrice
          </b>
        </li>
        <li>
          <span>
            Email: 
          </span>
          <b>
            emanuel@me.com
          </b>
        </li>
        <li>
          <span>
            License: 
          </span>
          <b>
            199787200045637884773
          </b>
        </li>
        <li>
          <span>
            Assigned bus: 
          </span>
          <b>
            RAB1000
          </b>
        </li>
      </ul>
      <hr />
      <div>
        <form
          action="#23"
          class="py-2"
          id="assign-form"
        >
          <label
            class="block font-raleway"
            for="bus"
          >
            Bus plate number:
             
          </label>
          <input
            class="bg-gray-300 my-2 border px-2 py-1 rounded-sm placeholder:font-raleway uppercase"
            id="bus-plate"
            name="plate"
            placeholder="RAB1000"
            required=""
            type="text"
          />
          <button
            class="bg-primary rounded-md text-white font-bold font-raleway py-2 px-3 hover:bg-hover transition-all block hover:transition-all"
            type="submit"
          >
            Search
          </button>
          <div />
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
